# spectre-rust-poc

./: .gitignore  Cargo.toml  Makefile  README.md  attacker.rs  dumb-victim.rs  flag.txt  run_experiment.sh
src/: attacker.rs  dumb-victim.rs  spec.rs  utils.rs
