[package]
name = "spectre-rust-poc"
version = "0.1.0"
authors = ["Alexandra Sandulescu <alecsandra.sandulescu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="attacker"
path="src/attacker.rs"

[[bin]]
name="dumb-victim"
path="src/dumb-victim.rs"
